--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -4,26 +4,24 @@ version = "0.0.1"
 edition = "2021"
 
 [build-dependencies]
-lalrpop = "0.20"
+lalrpop.workspace = true
 
 [dependencies]
-async-trait = "0.1"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-schemars = { version = "0.8", features = ["chrono", "uuid1", "rust_decimal"] }
-uuid = { version = "1.7", features = ["v4", "serde"] }
-chrono = { version = "0.4", features = ["serde"] }
-rust_decimal = { version = "1.34", features = ["serde-with-float"] }
-base64 = "0.21"
-sqlx = { version = "0.7", features = [
-    "postgres",
-    "uuid",
-    "chrono",
-    "rust_decimal",
-    "json",
-    "runtime-tokio",
-    "tls-rustls",
-] }
-lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
+async-trait.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+schemars.workspace = true
+uuid.workspace = true
+chrono.workspace = true
+rust_decimal.workspace = true
+base64.workspace = true
+sqlx.workspace = true
+lalrpop-util.workspace = true
 
 model_derive.workspace = true
+enum_derive.workspace = true
+
+[dev-dependencies]
+tokio.workspace = true
+uuid.workspace = true
+sqlx.workspace = true
