connect to test database via docker internal network

--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
-  postgres-opticon:
+  postgres-model:
     image: postgres:16
     environment:
       POSTGRES_DB: "model"
       POSTGRES_USER: "model"
       POSTGRES_PASSWORD: "model"
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/model/postgresql/data
     command: |
