--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,22 +1,6 @@
 steps:
-    - label: Start Test Database
-      commands:
-          - |
-              # Start database via docker-compose
-              docker-compose -f .buildkite/docker-compose.yml up -d
-    - label: Run Unit Tests
-      commands:
-          - |
-              # Install dependencies
-              apt-get update && apt-get -y install clang libclang-dev cmake ca-certificates libssl-dev && rm -rf /var/lib/apt/lists/*
-
-              # Install rust and cargo
-              rustup default stable && rustup update
-
-              # Run unit tests
-              cargo test
-    - label: Stop Test Database
-      commands:
-          - |
-              # Stop database via docker-compose
-              docker-compose -f .buildkite/docker-compose.yml down
+    - name: "Run Tests"
+    command: test.sh
+    plugins:
+        - docker-compose#v3.0.3:
+            run: app
