--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-    - command: test.sh
+    - command: ./test.sh
       plugins:
           - docker-compose#v3.0.3:
                 run: app
