--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,12 +1,12 @@
 services:
-  postgres-model:
+  postgres:
     image: postgres:16
     environment:
       POSTGRES_DB: "model"
       POSTGRES_USER: "model"
       POSTGRES_PASSWORD: "model"
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/model/postgresql/data
     command: |
@@ -14,6 +14,15 @@ services:
       -c wal_level=logical
       -c max_wal_senders=5
       -c max_replication_slots=5
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.test
+    working_dir: /app
+    volumes:
+      - .:/app
+    depends_on:
+      - postgres
 volumes:
   postgres_data:
     driver: local
